# iwuji

./: .gitignore  .pdm.toml  README.md  pyproject.toml  testing.sqlite
backend/: .env  .gitignore  .pdm.toml  LICENSE  Procfile  README.md  bootstrap.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.py  stack.ts  testing.sqlite
backend/alembic/: env.py
backend/alembic/test/: test_alembic.py
backend/alembic/versions/: 2154f34bf0b1_init_db.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/database/: conf.py  document.py
backend/app/shared/: dependency.py
backend/app/src/_base/: models.py
backend/app/src/address/: crud.py  schemas.py
backend/app/src/auth/: crud.py
backend/app/src/author/: crud.py  enum.py  models.py  schemas.py
backend/app/src/cart/: crud.py  enum.py  models.py  schemas.py
backend/app/src/media/: crud.py  models.py
backend/app/src/order/: crud.py  enum.py  models.py  schemas.py
backend/app/src/payment/: crud.py  enum.py  models.py  schemas.py
backend/app/src/permission/: crud.py
backend/app/src/product/: crud.py  models.py  schemas.py
backend/app/src/publisher/: schemas.py
backend/app/src/review/: crud.py  models.py  schemas.py
backend/app/src/user/: crud.py  schemas.py
backend/app/utils/: discount_calculator.py  generate_paymanet_link.py  os_operation.py  password_hasher.py  payments.py  pydanticForm.py  random_string.py
backend/backend/: main.py
backend/backend/core/: config.py  security.py
backend/backend/database/: conf.py  document.py
backend/backend/lib/mail/: mailer.py  template_finder.py
backend/backend/lib/middleware/: exception_formatter.py  makefilter_obj.py
backend/backend/shared/: dependency.py
backend/backend/src/_base/: models.py  schemas.py  service.py
backend/backend/src/address/: crud.py  models.py  schemas.py  service.py
backend/backend/src/auth/: crud.py  models.py  schemas.py
backend/backend/src/author/: crud.py  enum.py  models.py  schemas.py  service.py
backend/backend/src/cart/: crud.py  enum.py  models.py  schemas.py
backend/backend/src/category/: crud.py  models.py  schemas.py
backend/backend/src/media/: crud.py  models.py  schemas.py
backend/backend/src/order/: crud.py  enum.py  models.py  schemas.py
backend/backend/src/payment/: crud.py  enum.py  models.py  schemas.py
backend/backend/src/permission/: crud.py  models.py  schemas.py
backend/backend/src/product/: crud.py  models.py  schemas.py
backend/backend/src/review/: crud.py  models.py  schemas.py
backend/backend/src/user/: crud.py  models.py  schemas.py
backend/backend/templates/: action.html
backend/backend/utils/: discount_calculator.py  make_filter.py  os_operation.py  password_hasher.py  payments.py  pydanticForm.py  random_string.py
backend/core/: settings.py
backend/db/: config.py  model.py
backend/middleware/: auth_middleware.py  exclude_data_from_response.py  response_formatter.py
backend/src/app/address/: model.py  repository.py  schema.py  service.py
backend/src/app/auth/: model.py  repository.py  schema.py  service.py
backend/src/app/author/: model.py  repository.py  schema.py  service.py
backend/src/app/cart/: model.py  repository.py  schema.py  service.py  validate.py
backend/src/app/category/: model.py  repository.py  schema.py  service.py
backend/src/app/media_store/: model.py  repository.py  schema.py  service.py  util.py  validator.py
backend/src/app/order/: model.py  repository.py  schema.py  service.py
(+393 files in other folders)
