[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kokoserver <kokoserver20@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}
uvicorn = {extras = ["standard"], version = "^0.21.1"}
ormar = {extras = ["postgresql"], version = "^0.12.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-slugify = "^8.0.1"
rave-python = "^1.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
