[tool.pdm]
[tool.pdm.dev-dependencies]


dependencies = []

[project]
name = "Iwuji2.0"
version = "0.1.0"
description = "A backend for book selling website"
authors = [
    {name = "kokoserver", email = "kokoserver20@hotmail.com"},
]




[tool.pdm.scripts]
server = {call = "bootstrap:run_server"}
check = "flake8 ."
format = "black --line-length 80 ."

requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
